# deb822-lossless

./: .gitignore  Cargo.toml  README.md  disperse.toml
.github/workflows/: rust.yml
apt-source/: Cargo.toml
apt-source/examples/: source-for-docker.rs
apt-source/src/: error.rs  lib.rs
apt-sources/: Cargo.toml
apt-sources/examples/: source-for-docker.rs
apt-sources/src/: error.rs  lib.rs  lossless.rs  signature.rs  traits.rs
bench/: Sources  bench_lossless.rs  bench_lossy.rs
deb822-derive/: Cargo.toml  README.md
deb822-derive/src/: lib.rs
deb822-fast/: Cargo.toml
deb822-fast/bench/: bench_lossy.rs
deb822-fast/src/: convert.rs  lex.rs  lib.rs
deb822-lossless/: Cargo.toml  README.md
deb822-lossless/bench/: bench_lossless.rs
debian-control/: Cargo.toml  README.md
debian-control/examples/: create-file.rs
debian-control/src/: apt.rs  changes.rs  control.rs  fields.rs  lib.rs  pgp.rs  relations.rs  vcs.rs
debian-control/src/lossless/: apt.rs  buildinfo.rs  changes.rs  control.rs  mod.rs  relations.rs
debian-control/src/lossy/: apt.rs  buildinfo.rs  control.rs  ftpmaster.rs  mod.rs  relations.rs
debian-control/src/testdata/: InRelease  Release
debian-control/testdata/: ruff.buildinfo
debian-copyright/: Cargo.toml  README.md
debian-copyright/examples/: license-for-file.rs
debian-copyright/src/: glob.rs  lib.rs  lossless.rs  lossy.rs
dep3/: Cargo.toml  README.md
dep3/examples/: read-dep3.rs
dep3/src/: fields.rs  lib.rs  lossless.rs  lossy.rs
examples/: edit-field.rs  readonly.rs
r-description/: Cargo.toml  README.md
r-description/src/: lib.rs  lossless.rs  lossy.rs  relations.rs  version.rs
r-description/testdata/: dplyr.desc
src/: common.rs  convert.rs  copyright.rs  deb822.rs  lex.rs  lib.rs  lossless.rs  lossy.rs  relations.rs  vcs.rs
src/deb822/: lex.rs  mod.rs
