[workspace]
resolver = "2"
members = [ "deb822-lossless", "deb822-derive", "deb822-fast", "debian-control", "debian-copyright", "dep3", "apt-sources"]

[workspace.package]
repository = "https://github.com/jelmer/deb822-lossless"
homepage = "https://github.com/jelmer/deb822-lossless"

[workspace.dependencies]
rowan = "0.16"
pyo3 = ">=0.22, <0.24"


