[package]
name = "apt-sources"
authors = ["Michał Fita <4925040+michalfita@users.noreply.github.com>"]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
description = "A parser for APT source files (package repositories specification)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["debian", "deb822", "rfc822", "edit", "apt"]
categories = ["parser-implementations"]

[dependencies]
deb822-fast = { version = ">=0.1", path = "../deb822-fast", features = ["derive"] }
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
indoc = { version = "2.0.5" }
