[package]
name = "deb822-derive"
description = "Derive macro for deb822 style paragraphs"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"
repository.workspace = true
homepage.workspace = true
keywords = ["debian", "deb822", "rfc822", "lossless", "edit"]
categories = ["parser-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = { version = "2", features = ["parsing"] }
