[package]
name = "debian-control"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"
description = "A parser for Debian copyright files"
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
rowan = "0.15.11"
debversion = "0.3.1"
regex = "1"
deb822-lossless = { version = "0.1.9", path = ".." }
url = "2.5.1"
