[package]
name = "debian-control"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"
description = "A parser for Debian copyright files"
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
rowan = ">=0.15"
debversion = ">=0.3"
regex = "1"
deb822-lossless = { version = ">=0.1.19", path = ".." }
url = "2"
pyo3 = { workspace = true, optional = true }

[features]
python-debian = ["dep:pyo3", "deb822-lossless/python-debian"]
