[package]
name = "debian-control"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
edition = "2021"
version = "0.1.38"
license = "Apache-2.0"
description = "A parser for Debian copyright files"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["debian", "deb822", "rfc822", "lossless", "edit"]
categories = ["parser-implementations"]

[dependencies]
rowan = { version = ">=0.15", optional = true }
debversion = ">=0.3"
regex = "1"
deb822-lossless = { version = ">=0.2", path = "..", features = ["derive"] }
url = "2"
pyo3 = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true }
serde = { version = "1", optional = true }

[features]
default = ["chrono", "lossless"]
python-debian = ["dep:pyo3", "deb822-lossless/python-debian"]
chrono = ["dep:chrono"]
serde = ["dep:serde"]
lossless = ["dep:rowan"]

[[example]]
name = "create-file"
required-features = ["lossless"]

[dev-dependencies]
serde_json = "1.0.128"
