[package]
name = "debian-copyright"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
edition = "2021"
license = "Apache-2.0"
description = "A parser for Debian copyright files"
repository = { workspace = true }
homepage = { workspace = true }
version = "0.1.24"

[dependencies]
debversion = ">=0.3"
regex = ">=1.10"
deb822-lossless = { version = ">=0.1.10", path = ".." }
