[package]
name = "debian-copyright"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
edition = "2021"
license = "Apache-2.0"
description = "A parser for Debian copyright files"
repository = { workspace = true }
homepage = { workspace = true }
version = "0.1.27"
keywords = ["debian", "copyright", "edit", "dep5"]
categories = ["parser-implementations"]

[dependencies]
debversion = ">=0.3"
regex = ">=1.10"
deb822-lossless = { version = ">=0.2", path = "..", features = ["derive"] }

[features]
default = ["lossless"]
lossless = []
