[package]
name = "dep3"
edition = "2021"
license = "Apache-2.0"
version = "0.1.27"
description = "A library for parsing and generating DEP-3 headers."
homepage = "https://github.com/jelmer/deb822-lossless"
repository = "https://github.com/jelmer/deb822-lossless"
keywords = ["debian", "patch", "dep3", "lossless"]
categories = ["parser-implementations"]

[dependencies]
chrono = ">=0.4"
deb822-lossless = { path = "..", version = ">=0.1.9", features = ["derive"] }
url = "2.5.2"
