[package]
name = "dep3"
edition = "2021"
license = "Apache-2.0"
version = "0.1.28"
description = "A library for parsing and generating DEP-3 headers."
homepage = "https://github.com/jelmer/deb822-lossless"
repository = "https://github.com/jelmer/deb822-lossless"
keywords = ["debian", "patch", "dep3", "lossless"]
categories = ["parser-implementations"]

[dependencies]
chrono = ">=0.4"
deb822-lossless = { path = "../deb822-lossless", version = ">=0.2", optional = true }
deb822-fast = { path = "../deb822-fast", version = ">=0.1", features = ["derive"] }
url = "2"

[features]
default = ["lossless"]
lossless = ["dep:deb822-lossless"]

[badges]
maintenance = { status = "actively-maintained" }
