[package]
name = "r-description"
description = "Rust library for parsing and generating R DESCRIPTION files"
edition = "2021"
version = "0.1.2"
repository.workspace = true
homepage.workspace = true
license = "Apache-2.0"
keywords = ["r-description", "rfc822", "lossless", "edit", "r"]
categories = ["parser-implementations"]

[dependencies]
deb822-lossless = { version = ">=0.1.22", path = "..", features = ["derive"] }
rowan.workspace = true
url = "2"
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde"]
